--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome -->
+  <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
+      <!-- Icons -->
+      <a href="https://icons8.com/icon/01H1lVpWMS7G/kawaii-ice-cream"></a>
 </head>
 <body>
 
@@ -44,6 +53,16 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-copyright">
+      This <img class="vanilla-ice-cream-img" src="vanilla-ice-cream.png"/>JS Drum Kit is made with <i class="fas fa-heart"></i> by Kristina Z.
+    </div>
+    <div class="footer-links">
+      <a href="https://github.com/Kristy1max/drum-kit" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+    
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
